--- a/index.html
+++ b/index.html
@@ -111,20 +111,20 @@
 										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/Highnoon%20Financial%20Analysis.pdf" target="_blank" class="button">View Report</a></li>
 									</ul>
 								</article>
-								<!--
+								
 								<article>
 									<header>
-										<span class="date">April 11, 2017</span>
-										<h2><a href="#">Odio magna<br />
-										sed consectetur</a></h2>
+										<span class="date">May 26, 2023</span>
+										<h2>The Searle Comapny Limited (SEARL) Ratio Analysis for the period 2017-2021</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/pic06.png" alt="" /></a>
+									<p>This comprehensive analysis evaluates the financial performance of Searle Pakistan Limited over a five-year period, focusing on key liquidity, profitability, efficiency, and solvency metrics. Through 25+ financial ratios—including current ratio, inventory turnover, debt-to-equity, and return on assets—the study benchmarks Searle against industry peers like Sanofi Aventis, Otsuka, and GlaxoSmithKline.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/The%20Searle%20Company%20-%20Ratio%20Analysis%20(2017-2021).pdf" target="_blank" class="button">View Report</a></li>
 									</ul>
 								</article>
-								
+
+								<!--
 								<article>
 									<header>
 										<span class="date">April 7, 2017</span>
