--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 										<h2>The Searle Comapny Limited (SEARL) Ratio Analysis for the period 2017-2021</h2>
 									</header>
 									<a class="image fit"><img src="images/pic06.png" alt="" /></a>
-									<p>This comprehensive analysis evaluates the financial performance of Searle Pakistan Limited over a five-year period, focusing on key liquidity, profitability, efficiency, and solvency metrics. Through 25+ financial ratios—including current ratio, inventory turnover, debt-to-equity, and return on assets—the study benchmarks Searle against industry peers like Sanofi Aventis, Otsuka, and GlaxoSmithKline.</p>
+									<p>This comprehensive analysis evaluates the financial performance of Searle Pakistan Limited over a five-year period, focusing on key liquidity, profitability, efficiency, and solvency metrics. Through 25+ financial ratios such as the current ratio, inventory turnover, debt-to-equity, and return on assets. The study benchmarks Searle against industry peers like Sanofi Aventis, Otsuka, and GlaxoSmithKline.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/The%20Searle%20Company%20-%20Ratio%20Analysis%20(2017-2021).pdf" target="_blank" class="button">View Report</a></li>
 									</ul>
