--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</header>
 								<a class="image main"><img src="images/pic01.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/0e1f3ce37e4d76220bfe57c5f7b5160c16c13ce1/UK-EU%20trade%20through%20the%20Gravity%20Model.pdf" target="_blank" class="button large">View Report</a></li>
+									<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/tree/main/UK-EU%20Trade%20report" target="_blank" class="button large">View Report</a></li>
 								</ul>
 							</article>
 
