--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								</header>
 								<a class="image main"><img src="images/pic01.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/tree/main/UK-EU%20Trade%20report" target="_blank" class="button large">View Report</a></li>
+									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20Trade%20report" target="_blank" class="button large">View Report</a></li>
 								</ul>
 							</article>
 
@@ -74,7 +74,7 @@
 									<a class="image main"><img src="images/pic02.png" alt="" /></a>
 									<p>Analysis of smartphone price determinants using a dataset of 1,200+ devices. After cleaning and transforming data (handling missing values, log-transforming prices, and encoding brands), exploratory analysis revealed correlations between price, RAM, storage, and display size. A decision tree regression model outperformed linear, lasso, and ridge models, achieving the highest accuracy (R²=0.77) in predicting prices.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/tree/main/Smartphone%20price%20ML" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Smartphone%20price%20ML" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -85,7 +85,7 @@
 									<a href="#" class="image fit"><img src="images/pic03.png" alt="" /></a>
 									<p>These files present a statistical analysis of camera data, focusing on variables such as price, megapixels, weight, and brand (Canon vs. Nikon). The analysis includes normality testing (rejecting normality for most variables), linear regression modeling to predict price, and model comparisons using adjusted R-squared and residual diagnostics. The final model (m3) incorporating megapixels, weight, and score showed improved explanatory power, though residual plots indicated potential non-linearities, suggesting limitations in linear assumptions for prediction accuracy.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/tree/main/Camera%20Prices%20ML%20in%20R" target="_blank" class="button">View Project</a></li>
+										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Camera%20Prices%20ML%20in%20R" target="_blank" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
@@ -96,7 +96,7 @@
 									<a class="image fit"> <img src="images/pic04.png" alt="" /></a>
 									<p>This report analyzes Pakistan's evolving security landscape, examining the interplay between public policing challenges and the expanding private security sector. It highlights rising crime rates, economic pressures, and the critical role of public-private partnerships in addressing security gaps through modernization, regulatory reforms, and tailored services. The study underscores the need for strategic investments and collaboration to enhance national safety and economic confidence.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/Private%20Security%20Services%20Market%20Structure%20in%20Pakistan.pdf" target="_blank" class="button">View Report</a></li>
+										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Private%20Security%20Services%20Market%20Structure%20in%20Pakistan.pdf" target="_blank" class="button">View Report</a></li>
 									</ul>
 								</article>
 								
@@ -108,7 +108,7 @@
 									<a class="image fit"><img src="images/pic05.png" alt="" /></a>
 									<p>This financial analysis report evaluates Highnoon Laboratories Limited (2018–2022), focusing on capital structure trends, dividend policies, and key financial metrics. It highlights a strategic shift toward equity financing and reduced long-term debt, alongside fluctuating dividend payouts linked to earnings growth and expansion initiatives. The study notes consistent bonus dividends, operational efficiencies, and comparisons with industry peers, emphasizing Highnoon’s prudent financial management amid market opportunities and economic challenges.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/Highnoon%20Financial%20Analysis.pdf" target="_blank" class="button">View Report</a></li>
+										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Highnoon%20Financial%20Analysis.pdf" target="_blank" class="button">View Report</a></li>
 									</ul>
 								</article>
 								
@@ -120,7 +120,7 @@
 									<a class="image fit"><img src="images/pic06.png" alt="" /></a>
 									<p>This comprehensive analysis evaluates the financial performance of Searle Pakistan Limited over a five-year period, focusing on key liquidity, profitability, efficiency, and solvency metrics. Through 25+ financial ratios such as the current ratio, inventory turnover, debt-to-equity, and return on assets. The study benchmarks Searle against industry peers like Sanofi Aventis, Otsuka, and GlaxoSmithKline.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/The%20Searle%20Company%20-%20Ratio%20Analysis%20(2017-2021).pdf" target="_blank" class="button">View Report</a></li>
+										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/The%20Searle%20Company%20-%20Ratio%20Analysis%20(2017-2021).pdf" target="_blank" class="button">View Report</a></li>
 									</ul>
 								</article>
 
