--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 								</header>
 								<a class="image main"><img src="images/pic01.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20Trade%20report" target="_blank" class="button large">View Report</a></li>
+									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20trade%20through%20gravity%20model/UK-EU%20trade%20through%20the%20Gravity%20Model.pdf" target="_blank" class="button large">View Report</a></li>
+									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20trade%20through%20gravity%20model/GeoPandas%20plots.ipynb" target="_blank" class="button large">View Notebook</a></li>
+									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20trade%20through%20gravity%20model/Data.xlsx" target="_blank" class="button large">Download Data</a></li>
 								</ul>
 							</article>
 
@@ -96,7 +98,7 @@
 									<a class="image fit"> <img src="images/pic04.png" alt="" /></a>
 									<p>This report analyzes Pakistan's evolving security landscape, examining the interplay between public policing challenges and the expanding private security sector. It highlights rising crime rates, economic pressures, and the critical role of public-private partnerships in addressing security gaps through modernization, regulatory reforms, and tailored services. The study underscores the need for strategic investments and collaboration to enhance national safety and economic confidence.</p>
 									<ul class="actions special">
-										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Private%20Security%20Services%20Market%20Structure%20in%20Pakistan.pdf" target="_blank" class="button">View Report</a></li>
+										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Market%20Structure%20of%20Private%20Security%20Services%20in%20Pakistan.pdf" target="_blank" class="button">View Report</a></li>
 									</ul>
 								</article>
 								
