--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<a class="image main"><img src="images/pic01.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20trade%20through%20gravity%20model/UK-EU%20trade%20through%20the%20Gravity%20Model.pdf" target="_blank" class="button large">View Report</a></li>
-									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20trade%20through%20gravity%20model/GeoPandas%20plots.ipynb" target="_blank" class="button large">View Notebook</a></li>
+									<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/UK-EU%20Trade%20report/GeoPandas%20plots.ipynb" target="_blank" class="button large">View Notebook</a></li>
 									<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/UK-EU%20trade%20through%20gravity%20model/Data.xlsx" target="_blank" class="button large">Download Data</a></li>
 								</ul>
 							</article>
@@ -77,7 +77,7 @@
 									<p>Analysis of smartphone price determinants using a dataset of 1,200+ devices. After cleaning and transforming data (handling missing values, log-transforming prices, and encoding brands), exploratory analysis revealed correlations between price, RAM, storage, and display size. A decision tree regression model outperformed linear, lasso, and ridge models, achieving the highest accuracy (R²=0.77) in predicting prices.</p>
 									<ul class="actions special">
 										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Smartphone%20Price%20ML%20in%20Python/DA%20Report.pdf" target="_blank" class="button">View Report</a></li>
-										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Smartphone%20Price%20ML%20in%20Python/Smartphone%20Prices.ipynb" target="_blank" class="button">Download Notebook</a></li>
+										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/Smartphone%20price%20ML/Smartphone%20Prices.ipynb" target="_blank" class="button">View Notebook</a></li>
 										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Smartphone%20Price%20ML%20in%20Python/smartphone_prices.csv" target="_blank" class="button">Download Data</a></li>
 									</ul>
 								</article>
@@ -89,9 +89,9 @@
 									<a href="#" class="image fit"><img src="images/pic03.png" alt="" /></a>
 									<p>These files present a statistical analysis of camera data, focusing on variables such as price, megapixels, weight, and brand (Canon vs. Nikon). The analysis includes normality testing (rejecting normality for most variables), linear regression modeling to predict price, and model comparisons using adjusted R-squared and residual diagnostics. The final model (m3) incorporating megapixels, weight, and score showed improved explanatory power, though residual plots indicated potential non-linearities, suggesting limitations in linear assumptions for prediction accuracy.</p>
 									<ul class="actions special">
-										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Camera%20Price%20ML%20in%20R/R_All%20outputs.pdf" target="_blank" class="button">View R Script</a></li>
-										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Camera%20Price%20ML%20in%20R/R_Script_ML_Camera%20Prices.R" target="_blank" class="button">Download R Script</a></li>
+										<li><a href="https://github.com/Mustafa-insights/PortfolioProjects/blob/main/Camera%20Prices%20ML%20in%20R/R_Script_ML_Camera%20Prices.R" target="_blank" class="button">View R Script</a></li>
 										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Camera%20Price%20ML%20in%20R/R_Analysis%20file.pdf" target="_blank" class="button">View Analysis</a></li>
+										<li><a href="https://mustafa-insights.github.io/primeanalyses.github.io/projects/Camera%20Price%20ML%20in%20R/Nikon.csv" target="_blank" class="button">Download Data</a></li>
 									</ul>
 								</article>
 								<article>
